examples/.java_subroutine.bootstrap/bootstrap.output
.java_subroutine.bootstrap/bootstrap.java:6: error: ';' expected
	System.out.prin tln(a);
	                   ^
.java_subroutine.bootstrap/bootstrap.java:6: error: not a statement
	System.out.prin tln(a);
	                    ^
.java_subroutine.bootstrap/bootstrap.java:6: error: ';' expected
	System.out.prin tln(a);
	                     ^
3 errors
